<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- International -->
    <string name="pref_wifi_key" translatable="false">pref_wifi</string>
    <string name="pref_vibrate_key" translatable="false">pref_vibrate</string>
    <string name="pref_led_key" translatable="false">pref_led</string>
    <string name="pref_refresh_key" translatable="false">pref_refresh</string>
    <string name="pref_refresh_time_key" translatable="false">pref_refresh_time</string>
    <string name="pref_reminder_offset_key" translatable="false">pref_reminder_offset</string>
    <string name="pref_notification_ringtone_key" translatable="false">pref_notification_ringtone</string>
    <string name="pref_version_upgraded" translatable="false">pref_version_13</string>
    <string name="pref_reminder_service_version" translatable="false">pref_rs_ver</string>
    <string name="pref_is_loading" translatable="false">pref_id_loading</string>

    <!-- Localized Start -->
    <string name="app_name">RBTV Sendeplan</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="wifi_not_connected">WiFi not connected!</string>
    <string name="pref_wifi">WiFi Only</string>
    <string name="pref_wifi_summ">Download calendar only if connected to WiFi</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate on alarm for upcoming show</string>
    <string name="pref_led">LED</string>
    <string name="pref_led_summary">Flash LED on alarm for upcoming show</string>
    <string name="pref_refresh">Refresh schedule</string>
    <string name="pref_refresh_summary">Refresh the schedule automatically after some time</string>
    <string name="pref_refresh_time">Refresh period</string>
    <string name="pref_reminder_offset">Remind before show start</string>
    <string name="pref_reminder_offset_dialog">How much time before the start?</string>
    <string name="pref_reminder_offset_summary">Remind me %d minutes before the show</string> <!-- %d will be filled by the number of minutes -->
    <string name="title_activity_settings">Settings</string>
    <string name="reminder_text">Running at %s</string> <!-- %s will be filled by the time -->
    <string name="pref_refresh_time_15minutes">15 minutes</string>
    <string name="pref_refresh_time_20minutes">20 minutes</string>
    <string name="pref_refresh_time_30minutes">30 minutes</string>
    <string name="pref_refresh_time_60minutes">1 hour</string>
    <string name="pref_refresh_time_90minutes">90 minutes</string>
    <string name="pref_refresh_time_120minutes">2 hours</string>
    <string name="pref_refresh_time_summary">Reload period: %s</string> <!-- %s will be filled by the value name -->
    <string name="pref_reminder_offset_picker_hint">minutes</string>
    <string name="pref_notification_ringtone">Sound</string>
    <string name="pref_notification_ringtone_summary">Play sound on alarm for upcoming show: %s</string>
    <string name="pref_notification_ringtone_none">None</string>
    <string name="error_download_failed">Error: Download failed</string>
    <string name="error_data_format">Error: Reading the calendar failed</string>
    <string name="error_reminder_before_now">Reminder time is in the past. Please check your reminder time settings.</string>
    <string name="running_indicator">Running now!</string>
    <string name="reminder_add_dialog_single">For this episode only</string>
    <string name="reminder_add_dialog_all">For this episode and all future episodes</string>
    <string name="reminder_add_dialog_title">Add reminder</string>
    <string name="reminder_remove_dialog_message">Delete reminder for all episodes</string>
    <string name="reminder_remove_dialog_positive">Ok</string>
    <string name="reminder_remove_dialog_negative">Cancel</string>
    <string name="one_day_schedule_widget_empty_view_text">No schedule data</string>
    <string name="one_day_schedule_widget_header">RBTV 24h Overview</string>
    <string name="notification_open_twitch_action_text">Open Twitch</string>
    <!-- Localized End -->

    <!-- Preference values -->
    <string name="pref_refresh_time_default" translatable="false">20</string>
    <string name="pref_reminder_offset_default" translatable="false">0</string>

</resources>
