<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/pref_wifi_key"
        android:title="@string/pref_wifi"
        android:summary="@string/pref_wifi_summ"
        android:defaultValue="true" />
    <de.mbdevelopment.android.rbtvsendeplan.NumberPickerPreference
        android:key="@string/pref_reminder_offset_key"
        android:title="@string/pref_reminder_offset"
        android:dialogTitle="@string/pref_reminder_offset_dialog"
        android:inputType="number"
        android:defaultValue="@string/pref_reminder_offset_default"
        android:persistent="true"/>
    <CheckBoxPreference
        android:key="@string/pref_vibrate_key"
        android:title="@string/pref_vibrate"
        android:summary="@string/pref_vibrate_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="@string/pref_led_key"
        android:title="@string/pref_led"
        android:summary="@string/pref_led_summary"
        android:defaultValue="true"/>
    <RingtonePreference
        android:key="@string/pref_notification_ringtone_key"
        android:title="@string/pref_notification_ringtone"
        android:summary="@string/pref_notification_ringtone_summary"
        android:ringtoneType="notification"
        android:showDefault="true"
        android:showSilent="true"
        android:defaultValue="content://settings/system/notification_sound"/>
    <CheckBoxPreference
        android:key="@string/pref_refresh_key"
        android:title="@string/pref_refresh"
        android:summary="@string/pref_refresh_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="@string/pref_refresh_time_key"
        android:title="@string/pref_refresh_time"
        android:dialogTitle="@string/pref_refresh_time"
        android:entries="@array/pref_refresh_time_entries"
        android:entryValues="@array/pref_refresh_time_values"
        android:defaultValue="@string/pref_refresh_time_default"
        android:dependency="@string/pref_refresh_key" />
</PreferenceScreen>